--- a/index.html
+++ b/index.html
@@ -6,20 +6,100 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Password Generator</title>
     <style>
-      #password {
-        width: 200px;
-        height: 50px;
+      #root {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin: auto;
+        height: 100vh;
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+          Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+      }
+
+      #main-container {
+        width: 330px;
+      }
+
+      #password-input {
+        width: 92%;
+        padding: 12px 4%;
+        margin-bottom: 10px;
+
+        border-radius: 4px;
+        /* dark mode */
+        /* border-color: rgba(255, 255, 255, 0.4); */
+        border-color: rgba(0, 0, 0, 0.4);
+        border-style: solid;
+        border-width: 1px;
+        
+        font-size: 16px;
+        /* box-shadow: 4px 4px 15px rgba(0, 0, 0, 0.2); */
+        /* box-shadow: 0px 3px 15px rgba(255, 255, 255, 0.521); */
+      }
+      
+      #password-input:focus {
+        outline: none;
+        /* darkmode */
+        /* border-color: rgba(255, 255, 255, 0.8); */
+        border-color: rgba(0, 0, 0, 0.8);
+      }
+
+      #password-display-container {
+        width: 100%;
+        height: 40px;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        border-radius: 4px;
+        border-color: rgba(0, 0, 0, 0.4);
+        border-width: 1px;
+        border-style: solid;
+
+        background-color: rgba(255, 255, 255, 0.08);
+      }
+
+      #password-display {
+        font-size: larger;
+        font-weight: 400;
       }
     </style>
     <script>
       function updatePassword() {
-        const password = document.getElementById("password").value;
+        const password = document.getElementById("password-input").value;
         document.getElementById("password-display").innerHTML = password;
       }
     </script>
   </head>
-  <body>
-    <input type="password" name="password" id="password" onchange="updatePassword();"/>
-    <h1 id="password-display"></h1>
+  <body id="root">
+    <div id="main-container">
+      <input
+        type="password"
+        name="password"
+        id="password-input"
+        placeholder="Click here..."
+        onchange="updatePassword();"
+      />
+      <div id="password-display-container">
+        <h1 id="password-display">Password will display here...</h1>
+      </div>
+    </div>
+    <script>
+      // dark mode
+      if (
+        window.matchMedia &&
+        window.matchMedia("(prefers-color-scheme: dark)").matches
+      ) {
+        document.getElementById("root").style.backgroundColor = "#121212";
+        document.getElementById("password-display").style.color = "#fff";
+
+        const passwordInputStyle =
+          document.getElementById("password-input").style;
+        passwordInputStyle.color = "#fff";
+        passwordInputStyle.backgroundColor = "#121212";
+      }
+    </script>
   </body>
 </html>
